--- a/src/Netension.Event.Hosting.LightInject/Netension.Event.Hosting.LightInject.csproj
+++ b/src/Netension.Event.Hosting.LightInject/Netension.Event.Hosting.LightInject.csproj
@@ -5,10 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-    <PackageReference Include="System.Text.Json" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+    <PackageReference Include="LightInject" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
