--- a/src/Netension.Event.Sample/appsettings.json
+++ b/src/Netension.Event.Sample/appsettings.json
@@ -3,10 +3,16 @@
     "Host": "mihben.net",
     "UserName": "guest",
     "Password": "guest",
-    "Receive": {
-      "Exchange": "netension-sample-exchange",
-      "Queue": "netension-sample-queue",
-      "Tag": "sample"
+    "Listen": {
+      "Queue": {
+        "Name": "netension-sample-queue",
+        "Tag": "sample"
+      },
+      "Bindings": {
+        "Binding": {
+          "Exchange": "netension-sample-exchange"
+        }
+      }
     }
   },
   "Serilog": {
