Add initializer to RabbitMQEventListener.

--- a/src/Netension.Event.Sample/appsettings.json
+++ b/src/Netension.Event.Sample/appsettings.json
@@ -6,7 +6,7 @@
     "Listen": {
       "Queue": {
         "Name": "netension-sample-queue",
-        "Tag": "sample"
+        "ConsumerPrefix": "sample1"
       },
       "Bindings": {
         "Binding": {
