--- a/src/Netension.Event.Sample/appsettings.json
+++ b/src/Netension.Event.Sample/appsettings.json
@@ -8,11 +8,18 @@
         "Name": "netension-sample-queue",
         "ConsumerPrefix": "sample1"
       },
-      "Bindings": {
-        "Binding": {
+      "Bindings": [
+        {
           "Exchange": "netension-sample-exchange"
+        },
+        {
+          "Exchange": "publish-test",
+          "RoutingKey": "routingkey"
         }
-      }
+      ]
+    },
+    "Publish": {
+      "Exchange": "publish-test"
     }
   },
   "Serilog": {
@@ -20,8 +27,8 @@
     "MinimumLevel": {
       "Default": "Verbose",
       "Override": {
-        "System": "Warning",
-        "Microsoft": "Warning"
+        "System": "Verbose",
+        "Microsoft": "Verbose"
       }
     },
     "WriteTo": [
