--- a/src/Netension.Event.Sample/Netension.Event.Sample.csproj
+++ b/src/Netension.Event.Sample/Netension.Event.Sample.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.2.5" />
+    <PackageReference Include="Netension.Extensions.Correlation" Version="0.0.1-beta.17" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
