--- a/src/Netension.Event.Hosting.LightInject.RabbitMQ/Netension.Event.Hosting.LightInject.RabbitMQ.csproj
+++ b/src/Netension.Event.Hosting.LightInject.RabbitMQ/Netension.Event.Hosting.LightInject.RabbitMQ.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="LightInject" Version="6.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Netension.Extensions.Security" Version="0.0.1-beta.17" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="5.0.0" />
